welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: not found: value hout
	if ((talking) && ((hour<8) || (hout>19))) {
                                       ^