welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if ((talking) && ((hour<8) || (hout>19))) {
		return true
	} else {
		return false
	}
}
